Fix some bugs & change layout & show log file name